SF/www/themes/CodeX/css/CodeX_normal.css
/*
//
// CodeX: Breaking Down the Barriers to Source Code Sharing inside Xerox
// Copyright (c) Xerox Corporation, CodeX / CodeX Team, 2001-2002. All Rights Reserved
// http://codex.xerox.com
//
// $Id$
//
// Originally written by Stephane Bouhet 2002, CodeX Team, Xerox
//
*/

/* general stuff */
BODY { 
  margin-top: 0;
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 0;
  background-color: #bcbcad;
  font-family: helvetica,arial,verdana,sans-serif;
  font-size: small;
  color: #333333;
}

A { text-decoration: none; color: #8b4020 }
a:hover { text-decoration: underline; color: #ff0000; }
a:visited { text-decoration:none; color: #8b4020}
a:active { text-decoration:none; color: #000000}

.smaller { font-size: x-small; }
.small { font-size: small; }
.normal { font-size: medium; }

.center { text-align: center; }
.left { text-align: left; }
.error { font-weight: bold; color: #980000; }
.feedback { color: red; }
.bold { font-weight: bold; }
.disable { color: gray; font-size: small;}
.highlight { color: red; }
.newproject { background-color: #EEEEEE; }
.top_up { color: #009900; }
.top_down { color: #CC0000; }
.command { font-family: courier,sans-serif; font-size: small;}
.subdomain { color: green; }
.bg_confirmdownload { background-color: #F7F7F7; }

PRE,TT { font-family: courier,sans-serif; }

/* forum */
.thread { background-color: #DDDDDD; }
.threadbody { background-color: #EEEEEE; }
.threadmsg { background-color: #E3E3E3; }

/* .footer { color: #333333; } */
.standardtable { width: 99%; border-spacing: 0; border: 0; color: #333333; }

/* content frame specific */
.contenttable { background-color: #F7F7F7; vertical-align: top; width: 99%; border-spacing: 0; border: 0; }

/* left menu specific */
.menuframe { background-color: #e8e8e0; vertical-align: top; horitontal-align: left; width: 60px; }
.menutable { background-color: #e8e8e0; vertical-align: top; width: 150px; border-spacing: 0; border: 0; font-size: small; }
.menutitle { vertical-align: top; font-weight: bold; text-align: left; color: #333333; }
.menuitem { vertical-align: top; text-align: right; color: #333333; }

/* group menu specific (see tabs and tabselect too) */
.groupmenutable { background-color: #e8e8e0; width: 100% ; border-top: thin solid #000000; border-bottom: thin solid #000000; }

/* classic box */
.boxtable { width: 99%; vertical-align: top; border-spacing: 1px; border: 0; }
.boxtitle { background-color: #E0DDD2; font-weight: bold; text-align: center; text-transform: capitalize; color: #000000; }
.boxitem {  background-color: #EAECEF; text-align: left; color: #333333; }
.boxitemalt { text-align: left; background-color: #ffffff; }
.boxhighlight { background-color: #e8e8e0; text-align: left; color: #333333; }

/* spartan box */
/* priority  */
.priora { background-color: #dadada; }
.priorb { background-color: #dad0d0; }
.priorc { background-color: #dacaca; }
.priord { background-color: #dac0c0; }
.priore { background-color: #dababa; }
.priorf { background-color: #dab0b0; }
.priorg { background-color: #daaaaa; }
.priorh { background-color: #da9090; }
.priori { background-color: #da8a8a; }

/* page specific */

.center { text-align: center; }
.boxspace { font-size: 2pt; }
.alignright { text-align: right }
.maintitlebar { color: #FFFFFF; font-size: large;}
.slogan { font-weight: bold; font-size: large; }
.osdn { font-family: verdana,arial,helvetica,sans-serif; font-weight: bold; color: #ffffff; font-size: x-small; }
.osdntext { font-weight: bold; text-decoration: none; color: #ffffff; font-size: x-small; }
.osdntext:visited { font-weight: bold; text-decoration: none; color: #ffffff; }
.osdntext:hover { font-weight: bold; text-decoration: none; color: #ffffff; }
.footer { color: white; font-size: xx-small; }

.tabs { color: #000000; }
.tabs:visited { color: #000000; }
.tabs:hover { color:#FF0000; } 
.tabselect { color: #000000; font-weight: bold; }
.tabselect:visited { color: #000000; font-weight: bold; }
.tabselect:hover { color:#FF0000; font-weight: bold; }

.titlebar { text-decoration:none; color:#000000; font-weight: bold; font-size: small;}
.develtitle { color:#000000; font-weight: bold; }
.legallink { color:#000000; font-weight: bold; }

.sortbutton { color: #000000; text-decoration: none; }
.sortbutton:hover { text-decoration: underline; }
.sortbutton:visited { color: #000000;}

/* calendar (fixed font size) */
.calendar_month { background-color: #E0DDD2; }
.calendar_day { background-color: #FFE6B5; }
.calendar_currentday { background-color: #FFFFA3; }
.calendar_nextmonth { background-color: #DBEAF5; }
.calendar_daymonth { background-color: white; } 
.calendar_font_othermonth { font-size: x-small; color: gray; }
.calendar_font { font-size: x-small; color: black; }
.calendar_font_month { font-size: x-small; color: black; }
.calendar_font_day { font-size: x-small; color: black; }

/* Help classes */
.bg_help {
  background-color: #ffffff;
}

/* Vertical spacing */
.vspace-bottom { margin-bottom: 3ex; }
.vspace-top { margin-top: 3ex; }
.vspace-both { margin-top: 3ex; margin-bottom: 3ex; }

/* text with tooltips (e.g. artifact fields) */
.tooltip { text-decoration:none; color: #000000}
.tooltip:hover { text-decoration:none; color: #ff0000}



/* dynamic fields                                */
/*************************************************/
/* Only background-color property is used        */
/* Only full hexa are allowed                    */
/* don't use names (purple, red, yellow)         */
/* don't use half hexa (#FF0000 instead of #F00) */
.codex_field_dependencies_highlight_change {
    /* background-color: #8b4020; */
}

